--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gospelito</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo2.png">
 </head>
 
 <body>
