--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gospelito</title>
+    <title>Gospel Coloring Book</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo2.png">
 </head>
